# neural-tablebases

./: .gitignore  ANALISIS_COMPRESION_TOTAL.md  ANALISIS_KRVKP.md  ANALISIS_PROYECTO_Y_LOGS.md  AUTHORS.md  CHANGES_SUMMARY.md  ENCODING_V2_RESULTS_SUMMARY.md  FINAL_RESULTS.md  FINAL_SESSION_SUMMARY.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  KPVK_FIXED_RESULTS.md  LICENSE  PROJECT_STATUS.md  README.md  RESPUESTAS.md  RESPUESTA_DTZ.md  RESUMEN_3_PIEZAS.md  RESUMEN_EJECUTIVO.md  SESSION_HANDOVER_V10_1.md  SESSION_SUMMARY_DTZ.md  TODO.md  analyze_3piece_endgames.py  analyze_kpvk.py  analyze_models.py  analyze_problem.py  analyze_training_details.py  analyze_weights.py  benchmark_results.md  check_data.py  create_canonical_from_existing.py  debug_canonical.py  debug_kpvk.py  debug_kpvk_detailed.py  debug_shards_all.py  dump_pro_keys.py  evaluate_npz.py  generate_kqvk_canonical_small.py  optimize_canonical.py  restructure.py  (+19 more)
data/: sf_intuition_map.json
docs/: ANALISIS_PROYECTO_ACTUALIZADO.md  HANDOVER_V5_V6.md  NET_VERSIONS.md  NEURAL_TABLEBASE_DESIGN.md  NEURAL_TABLEBASE_IMPLEMENTATION_PLAN.md  NEURAL_TABLEBASE_SPEC_V2.md  README.md  analysis_sf_intuition_4p.md  analysis_sf_intuition_5p.md  generate_krkp_dataset.py  sesion_bug.md  sf_intuition_full_report_4p.md  sf_intuition_full_report_5p.md  task.md  vanguard_v11_field_centric.md  vanguard_v8_architecture.md  walkthrough.md
results/: canonical_comparison_20260313_232127.json  canonical_training_results.json  (+2 more)
src/search/rust_movegen/: Cargo.toml
src/search/rust_movegen/src/: bitboard_board.rs  lib.rs  types.rs
(+183 files in other folders)
